1999-11-03  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Update to Lapack version 3.0.
	* lapack/ieeeck.f, lapack/dlasq2.f, lapack/dlasq3.f,
	lapack/dlasq5.f, lapack/dlasq6.f: New files.

1999-10-29  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* misc/lo-error.cc (current_liboctave_warning_handler): Define	here.
	(set_liboctave_warning_handler): New function.
	(liboctave_warning): Ditto.
	* misc/lo-error.h: Provide declararations for them here.

1999-10-19  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in (dist): Use `$(MAKE) -C dir' instead of `cd dir;
	$(MAKE); cd ..'.

1999-10-01  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* dassl/dpotrf.f, dassl/dpotf2.f: Move to lapack subdirectory.

Fri Mar 26 01:19:04 1999  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makerules.in (all): Don't try to use a special rule for making
	the archive.  The default rules may be slower, but they are also
	correct.

Wed Nov 11 17:27:35 1998  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in (CRUFT_DIRS): Add amos.  Delete specfun.
	* specfun: Delete directory.
	* amos: New directory

Thu Oct 15 00:43:13 1998  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* ranlib: Update to newer version of randlib.
	* ranlib/Makefile.in (SPECIAL): Update list.

Thu Sep 24 11:59:02 1998  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* balgen, eispack: Delete directories and unnecesary files.
	* Makefile.in (CRUFT_DIRS): Delete eispack and balgen from the list.

	* lapack/xdlamch.f: New file.

	* ordered-qz: New directory.
	* Makefile.in (CRUFT_DIRS): Add it to the list.

	* lapack/dggbak.f, lapack/dtgevc.f, lapack/zggbal.f: New files.

Tue Jun  2 09:57:52 1998  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* specfun/rybesl.f (rybesl): Don't access by(2) unless nb .gt. 1.

Mon May 11 12:33:42 1998  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* fftpack/passb3.f, fftpack/passb5.f, fftpack/passf3.f,
	fftpack/passf5.f: Use double precision constants in data
	statements.
